kubernetes/apps/default/jellyfin/app/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyfin.f9.casa`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
      middlewares:
        - name: default-headers
          namespace: traefik
